# simple-serve

./: Cargo.toml
src/: config.rs  main.rs
