[package]
name = "simple-serve"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
