[package]
name = "simple-serve"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
hyper = "0.13"
#lazy_static = "1"
#regex = "1"
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3"

[profile.release]
lto = true
